--- a/assessment-burnout-and-capacity.html
+++ b/assessment-burnout-and-capacity.html
@@ -2389,5 +2389,10 @@ function resetPlan(){
   setTimeout(() => btn.innerHTML = original, 1100);
 }
 </script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="assets/supabaseClient.js"></script>
+<script src="assets/accessControl.js"></script>
 </body>
 </html>
+
+
