--- a/checklist-expectation-alignment-.html
+++ b/checklist-expectation-alignment-.html
@@ -2719,5 +2719,10 @@
   </div>
 </footer>
 
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="assets/supabaseClient.js"></script>
+<script src="assets/accessControl.js"></script>
 </body>
 </html>
+
+
