--- a/checklist-performance-review-prep.html
+++ b/checklist-performance-review-prep.html
@@ -2640,5 +2640,10 @@ function renderSavedItems() {
 }
 </script>
 
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="assets/supabaseClient.js"></script>
+<script src="assets/accessControl.js"></script>
 </body>
 </html>
+
+
