--- a/checklist-presence-upgrade.html
+++ b/checklist-presence-upgrade.html
@@ -2700,7 +2700,12 @@ function renderSavedItems() {
 }
 </script>
 
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="assets/supabaseClient.js"></script>
+<script src="assets/accessControl.js"></script>
 </body>
 </html>
+
+
 
 
