--- a/checklist-workload-clarity.html
+++ b/checklist-workload-clarity.html
@@ -2874,5 +2874,8 @@ function renderSavedItems() {
 
 console.log('Workload Clarity Checklist script loaded');
 </script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="assets/supabaseClient.js"></script>
+<script src="assets/accessControl.js"></script>
 </body>
 </html>
