--- a/framework-micromanagement-to-autonomy.html
+++ b/framework-micromanagement-to-autonomy.html
@@ -2534,5 +2534,10 @@ function renderSavedItems() {
 }
 </script>
 
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="assets/supabaseClient.js"></script>
+<script src="assets/accessControl.js"></script>
 </body>
 </html>
+
+
