--- a/framework-negotiation.html
+++ b/framework-negotiation.html
@@ -2684,5 +2684,10 @@
       });
     }
   </script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="assets/supabaseClient.js"></script>
+<script src="assets/accessControl.js"></script>
 </body>
 </html>
+
+
