--- a/map-political-landscape.html
+++ b/map-political-landscape.html
@@ -3030,5 +3030,10 @@ ${json}
       });
     }
   </script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="assets/supabaseClient.js"></script>
+<script src="assets/accessControl.js"></script>
 </body>
 </html>
+
+
