--- a/planner-weekly-priority.html
+++ b/planner-weekly-priority.html
@@ -3441,5 +3441,10 @@ function renderSavedItems(){
 }
 </script>
 
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="assets/supabaseClient.js"></script>
+<script src="assets/accessControl.js"></script>
 </body>
 </html>
+
+
