--- a/profile.html
+++ b/profile.html
@@ -1553,5 +1553,8 @@
     });
 </script>
 
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="assets/supabaseClient.js"></script>
+<script src="assets/accessControl.js"></script>
 </body>
 </html>
