--- a/review-meeting-effectiveness.html
+++ b/review-meeting-effectiveness.html
@@ -2698,5 +2698,8 @@ function escapeHtml(text) {
 }
 </script>
 
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="assets/supabaseClient.js"></script>
+<script src="assets/accessControl.js"></script>
 </body>
 </html>
