--- a/script-library.html
+++ b/script-library.html
@@ -3317,5 +3317,10 @@ function hydrateFromUrl(){
 }
 </script>
 
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="assets/supabaseClient.js"></script>
+<script src="assets/accessControl.js"></script>
 </body>
 </html>
+
+
