--- a/create-account.html
+++ b/create-account.html
@@ -391,7 +391,7 @@
           <div class="password-input-container">
             <input type="password" id="password" class="form-input" placeholder="Create a secure password" required>
             <button type="button" class="password-toggle" id="passwordToggle" aria-label="Toggle password visibility">
-              <i class="fas fa-eye"></i>
+              <i class="fa-solid fa-eye"></i>
             </button>
           </div>
           <div id="passwordStrength" class="password-strength"></div>
@@ -402,7 +402,7 @@
           <div class="password-input-container">
             <input type="password" id="confirmPassword" class="form-input" placeholder="Confirm your password" required>
             <button type="button" class="password-toggle" id="confirmPasswordToggle" aria-label="Toggle confirm password visibility">
-              <i class="fas fa-eye"></i>
+              <i class="fa-solid fa-eye"></i>
             </button>
           </div>
           <div id="passwordMatch" class="password-strength"></div>
@@ -442,7 +442,7 @@
     // Use shared Supabase client (created in assets/supabaseClient.js)
     const supabase = window.supabaseClient;
 
-    // Password toggle functionality
+    // Password toggle functionality (UPDATED - reliable for FA6 + input.type)
     const passwordToggle = document.getElementById('passwordToggle');
     const passwordInput = document.getElementById('password');
 
@@ -450,17 +450,19 @@
     const confirmPasswordInput = document.getElementById('confirmPassword');
 
     passwordToggle.addEventListener('click', function () {
-      const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
-      passwordInput.setAttribute('type', type);
-      this.querySelector('i').classList.toggle('fa-eye');
-      this.querySelector('i').classList.toggle('fa-eye-slash');
+      const isHidden = passwordInput.type === 'password';
+      passwordInput.type = isHidden ? 'text' : 'password';
+
+      const icon = this.querySelector('i');
+      icon.className = isHidden ? 'fa-solid fa-eye-slash' : 'fa-solid fa-eye';
     });
 
     confirmPasswordToggle.addEventListener('click', function () {
-      const type = confirmPasswordInput.getAttribute('type') === 'password' ? 'text' : 'password';
-      confirmPasswordInput.setAttribute('type', type);
-      this.querySelector('i').classList.toggle('fa-eye');
-      this.querySelector('i').classList.toggle('fa-eye-slash');
+      const isHidden = confirmPasswordInput.type === 'password';
+      confirmPasswordInput.type = isHidden ? 'text' : 'password';
+
+      const icon = this.querySelector('i');
+      icon.className = isHidden ? 'fa-solid fa-eye-slash' : 'fa-solid fa-eye';
     });
 
     // Password strength indicator
