--- a/create-account.html
+++ b/create-account.html
@@ -689,5 +689,10 @@
       }
     });
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="assets/supabaseClient.js"></script>
+  <script src="assets/auth.js"></script>
+
 </body>
 </html>
+
