--- a/sign-in.html
+++ b/sign-in.html
@@ -388,5 +388,10 @@
       });
     });
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="assets/supabaseClient.js"></script>
+  <script src="assets/auth.js"></script>
+
 </body>
 </html>
+
