--- a/create-account.html
+++ b/create-account.html
@@ -632,7 +632,7 @@
               last_name: lastName,
               newsletter_opt_in: newsletterOptIn
             },
-            emailRedirectTo: window.location.origin + '/sign-in.html'
+            emailRedirectTo: window.location.origin + '/auth-callback.html'
           }
         });
 
@@ -677,3 +677,4 @@
 
 </body>
 </html>
+
