--- a/create-account.html
+++ b/create-account.html
@@ -27,7 +27,6 @@
       --text-muted:#8A8A8A;
 
       --accent-purple:#7B5FC4;
-      --accent-purple-soft:#F0ECFA;
 
       --success:#1f8f4a;
       --danger:#c0392b;
@@ -39,7 +38,6 @@
       --radius-14:14px;
       --radius-12:12px;
       --radius-10:10px;
-      --radius-8:8px;
     }
 
     *{ margin:0; padding:0; box-sizing:border-box; font-family:'Inter',-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif; }
@@ -71,27 +69,46 @@
     .left-column{
       flex:1.15;
       background:rgba(123,95,196,0.10);
-      padding:86px 52px 40px;
+      padding:52px 52px 40px; /* ✅ moved up */
       display:flex;
       flex-direction:column;
       justify-content:flex-start;
+      gap:18px;
+    }
+
+    /* ✅ logo now on the left */
+    .left-brand{
+      display:flex;
+      align-items:center;
+      gap:12px;
+      margin-bottom:6px;
+    }
+    .left-logo{
+      height:42px;
+      width:auto;
+    }
+    .left-logo-fallback{
+      display:none;
+      font-weight:800;
+      letter-spacing:.08em;
+      font-size:13px;
+      color:var(--text-dark);
     }
 
     .left-column h1{
-      font-size:44px;
-      font-weight:700;
+      font-size:34px; /* ✅ reduced */
+      font-weight:750;
       letter-spacing:-0.02em;
-      line-height:1.1;
-      margin-bottom:14px;
+      line-height:1.12;
       color:var(--text-dark);
     }
 
     .left-column p{
       color:var(--text-medium);
-      font-size:18px;
+      font-size:16px; /* ✅ reduced */
       line-height:1.5;
-      max-width:520px;
-      margin-bottom:26px;
+      max-width:560px;
+      margin-top:-6px;
     }
 
     .benefits-list{
@@ -99,8 +116,8 @@
       margin-top:6px;
       display:flex;
       flex-direction:column;
-      gap:16px;
-      max-width:560px;
+      gap:14px;
+      max-width:600px;
     }
 
     .benefits-list li{
@@ -108,7 +125,7 @@
       gap:12px;
       align-items:flex-start;
       color:var(--text-medium);
-      font-size:16px;
+      font-size:15px;
       line-height:1.45;
     }
 
@@ -122,36 +139,26 @@
     /* RIGHT */
     .right-column{
       flex:1;
-      padding:38px 54px 32px;
+      padding:22px 46px 20px; /* ✅ moved up */
       display:flex;
       flex-direction:column;
     }
 
-    .brand-row{
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      margin-bottom:18px;
-    }
-
-    .logo-img{ height:44px; width:auto; }
-    .logo-fallback{ display:none; font-weight:800; letter-spacing:.08em; font-size:14px; }
-
     .form-header{
-      margin-top:6px;
-      margin-bottom:18px;
+      margin-top:0;           /* ✅ up */
+      margin-bottom:10px;     /* ✅ tighter */
     }
 
     .form-header h2{
-      font-size:34px;
-      font-weight:700;
+      font-size:30px;
+      font-weight:750;
       letter-spacing:-0.02em;
-      margin-bottom:8px;
+      margin-bottom:6px;
     }
 
     .form-header p{
       color:var(--text-muted);
-      font-size:16px;
+      font-size:15px;
       line-height:1.4;
     }
 
@@ -160,9 +167,9 @@
       border:1px solid rgba(123,95,196,0.22);
       background:rgba(123,95,196,0.06);
       border-radius:var(--radius-14);
-      padding:14px 16px;
-      margin:10px 0 18px;
-      display:none; /* ✅ hidden by default */
+      padding:12px 14px;
+      margin:8px 0 12px;
+      display:none;
     }
     .next-steps-pop.show{
       display:block;
@@ -176,27 +183,27 @@
       display:flex;
       align-items:center;
       gap:10px;
-      font-weight:700;
+      font-weight:750;
       color:var(--text-dark);
-      font-size:16px;
-      margin-bottom:8px;
+      font-size:15px;
+      margin-bottom:6px;
     }
     .next-steps-title i{ color:var(--accent-purple); }
     .next-steps-pop ol{
       margin-left:18px;
       color:var(--text-medium);
-      font-size:14px;
-      line-height:1.55;
+      font-size:13.5px;
+      line-height:1.5;
     }
-    .next-steps-pop li{ margin-bottom:4px; }
+    .next-steps-pop li{ margin-bottom:3px; }
     .next-steps-note{
-      margin-top:8px;
+      margin-top:6px;
       color:var(--text-muted);
-      font-size:13px;
-      line-height:1.45;
+      font-size:12.5px;
+      line-height:1.4;
     }
     .next-steps-actions{
-      margin-top:10px;
+      margin-top:8px;
       display:flex;
       gap:14px;
       align-items:center;
@@ -205,8 +212,8 @@
     .link-btn{
       color:var(--accent-purple);
       text-decoration:none;
-      font-weight:700;
-      font-size:13px;
+      font-weight:800;
+      font-size:12.5px;
     }
     .link-btn:hover{ text-decoration:underline; }
     .muted-btn{
@@ -214,8 +221,8 @@
       border:none;
       padding:0;
       color:var(--text-muted);
-      font-weight:700;
-      font-size:13px;
+      font-weight:800;
+      font-size:12.5px;
       cursor:pointer;
     }
     .muted-btn:hover{ text-decoration:underline; color:var(--text-dark); }
@@ -224,13 +231,13 @@
     .inline-status{
       display:none;
       border-radius:var(--radius-12);
-      padding:12px 14px;
-      font-size:14px;
+      padding:10px 12px;
+      font-size:13.5px;
       line-height:1.45;
       border:1px solid var(--panel-border);
       background:#fafafa;
       color:var(--text-medium);
-      margin:6px 0 14px;
+      margin:6px 0 10px;
     }
     .inline-status.show{ display:block; }
     .inline-status.success{ border-color:rgba(31,143,74,0.25); background:rgba(31,143,74,0.06); color:var(--success); }
@@ -238,26 +245,23 @@
     .inline-status.info{ border-color:rgba(47,111,214,0.22); background:rgba(47,111,214,0.06); color:var(--info); }
 
     /* Form */
-    .form-row{
-      display:flex;
-      gap:14px;
-    }
-    .form-group{ flex:1; margin-bottom:14px; }
+    .form-row{ display:flex; gap:12px; }
+    .form-group{ flex:1; margin-bottom:10px; }
 
     .form-label{
       display:block;
-      margin-bottom:8px;
-      font-weight:700;
-      font-size:14px;
+      margin-bottom:6px;
+      font-weight:750;
+      font-size:13.5px;
       color:var(--text-dark);
     }
 
     .form-input{
       width:100%;
-      padding:12px 14px;
+      padding:10px 12px;
       border:1px solid var(--panel-border);
       border-radius:var(--radius-10);
-      font-size:16px;
+      font-size:15px;
       background:var(--primary-white);
       color:var(--text-dark);
       transition:all .15s ease;
@@ -299,10 +303,10 @@
       border-radius:0;
       box-shadow:none !important;
       flex:1;
-      padding:12px 14px;
+      padding:10px 12px;
     }
     .toggle-label{
-      width:52px;
+      width:48px;
       display:inline-flex;
       align-items:center;
       justify-content:center;
@@ -322,12 +326,12 @@
     .reveal-toggle:checked ~ .password-row .icon-eye { display:none; }
 
     .password-strength{
-      margin-top:8px;
-      font-size:13px;
+      margin-top:6px;
+      font-size:12.5px;
       display:flex;
       align-items:center;
-      min-height:18px;
-      font-weight:600;
+      min-height:16px;
+      font-weight:650;
     }
     .password-strength.weak{ color:var(--danger); }
     .password-strength.medium{ color:var(--warning); }
@@ -337,15 +341,15 @@
       display:flex;
       align-items:flex-start;
       gap:10px;
-      margin:10px 0 10px;
+      margin:8px 0 8px;
     }
     .checkbox-input{ margin-top:3px; accent-color:var(--accent-purple); }
     .checkbox-label{
-      font-size:13px;
+      font-size:12.5px;
       color:var(--text-medium);
       line-height:1.45;
     }
-    .checkbox-label a{ color:var(--accent-purple); text-decoration:none; font-weight:700; }
+    .checkbox-label a{ color:var(--accent-purple); text-decoration:none; font-weight:800; }
     .checkbox-label a:hover{ text-decoration:underline; }
 
     .submit-button{
@@ -353,13 +357,13 @@
       background:var(--accent-purple);
       color:white;
       border:none;
-      padding:14px 14px;
+      padding:12px 14px;
       border-radius:var(--radius-12);
-      font-weight:800;
+      font-weight:850;
       cursor:pointer;
       font-size:15px;
       transition:all .15s ease;
-      margin:12px 0 14px;
+      margin:10px 0 12px;
       display:flex;
       align-items:center;
       justify-content:center;
@@ -379,26 +383,25 @@
 
     .auth-footer{
       text-align:center;
-      padding-top:16px;
+      padding-top:12px;
       border-top:1px solid var(--panel-border);
       margin-top:auto;
     }
-    .auth-footer p{ color:var(--text-medium); font-size:14px; }
-    .auth-footer a{ color:var(--accent-purple); text-decoration:none; font-weight:800; }
+    .auth-footer p{ color:var(--text-medium); font-size:13.5px; }
+    .auth-footer a{ color:var(--accent-purple); text-decoration:none; font-weight:850; }
     .auth-footer a:hover{ text-decoration:underline; }
 
-    /* Responsive */
     @media (max-width:980px){
       .auth-container{ flex-direction:column; max-height:none; }
-      .left-column{ padding:36px 24px; }
-      .left-column h1{ font-size:34px; }
-      .right-column{ padding:28px 20px; }
+      .left-column{ padding:28px 22px; }
+      .right-column{ padding:22px 18px; }
+      .left-column h1{ font-size:30px; }
+      .left-column p{ font-size:15px; }
     }
     @media (max-width:520px){
       body{ padding:12px; }
       .form-row{ flex-direction:column; gap:0; }
-      .left-column h1{ font-size:30px; }
-      .form-header h2{ font-size:28px; }
+      .form-header h2{ font-size:26px; }
     }
   </style>
 </head>
@@ -408,6 +411,14 @@
 
     <!-- LEFT -->
     <div class="left-column">
+
+      <!-- ✅ Logo moved to the left panel -->
+      <div class="left-brand">
+        <img src="assets/img/logo.png" alt="The Employee Playbook" class="left-logo" id="leftLogo"
+          onerror="this.style.display='none'; document.getElementById('left-logo-fallback').style.display='block';">
+        <div class="left-logo-fallback" id="left-logo-fallback">THE EMPLOYEE PLAYBOOK</div>
+      </div>
+
       <h1>Join The Employee Playbook</h1>
       <p>Create your account and start making smarter moves in your career</p>
 
@@ -425,18 +436,12 @@
     <!-- RIGHT -->
     <div class="right-column">
 
-      <div class="brand-row">
-        <img src="assets/img/logo.png" alt="The Employee Playbook" class="logo-img" id="logo"
-          onerror="this.style.display='none'; document.getElementById('logo-fallback').style.display='block';">
-        <div class="logo-fallback" id="logo-fallback">THE EMPLOYEE PLAYBOOK</div>
-      </div>
-
       <div class="form-header">
         <h2>Create your account</h2>
         <p>Enter your details to get started</p>
       </div>
 
-      <!-- ✅ Pop-up card: hidden until user submits successfully -->
+      <!-- Pop-up card: hidden until user submits successfully -->
       <div class="next-steps-pop" id="nextStepsPop" aria-label="What happens next">
         <div class="next-steps-title">
           <i class="fa-solid fa-envelope-open-text" aria-hidden="true"></i>
@@ -535,23 +540,20 @@
     </div>
   </div>
 
-  <!-- ✅ Scripts -->
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="assets/supabaseClient.js"></script>
 
   <script>
   (() => {
-    // Shared Supabase client (created in assets/supabaseClient.js)
     const supabaseClient = window.supabaseClient;
 
-    // Elements
     const formStatus = document.getElementById('formStatus');
     const nextStepsPop = document.getElementById('nextStepsPop');
     const nextStepsNote = document.getElementById('nextStepsNote');
     const goSignIn = document.getElementById('goSignIn');
     const helpNoEmail = document.getElementById('helpNoEmail');
 
-    // Button loading state
     const submitBtn = document.getElementById('submitBtn');
     const submitText = document.getElementById('submitText');
     const submitIcon = document.getElementById('submitIcon');
@@ -580,7 +582,6 @@
       nextStepsPop.classList.remove('show');
     }
     function showNextSteps(email) {
-      // Make the pop-up feel contextual + premium
       nextStepsNote.innerHTML = `We’ve sent a verification link to <strong>${escapeHtml(email)}</strong>. If you don’t see it within a few minutes, check spam/junk.`;
       nextStepsPop.classList.add('show');
       nextStepsPop.scrollIntoView({ behavior:'smooth', block:'nearest' });
@@ -599,7 +600,6 @@
       return next || stored || 'the-toolkit.html';
     }
 
-    // Premium error mapping
     function premiumMessageForError(error) {
       const raw = (error && error.message) ? String(error.message) : '';
       const msg = raw.toLowerCase();
@@ -631,7 +631,7 @@
       return {
         type:'error',
         html:"We couldn’t create your account right now.<br><span style='color:var(--text-medium);font-weight:600;'>Please try again — if it continues, contact support.</span>"
-      };
+        };
     }
 
     // Password indicators
@@ -679,7 +679,6 @@
       }
     }
 
-    // Help button content (doesn't pretend we can “resend” via client-only)
     helpNoEmail.addEventListener('click', () => {
       showStatus(
         "If the email hasn’t arrived:<br>" +
@@ -692,13 +691,12 @@
       );
     });
 
-    // Submit
     const createAccountForm = document.getElementById('createAccountForm');
 
     createAccountForm.addEventListener('submit', async (e) => {
       e.preventDefault();
       clearStatus();
-      hideNextSteps(); // ✅ Keep the “What happens next” hidden until success
+      hideNextSteps();
 
       if (!supabaseClient || !supabaseClient.auth) {
         showStatus(
@@ -757,28 +755,16 @@
           return;
         }
 
-        // Email confirmations ON -> session is null
         const needsEmailConfirm = !data?.session;
 
         if (needsEmailConfirm) {
-          // ✅ Show the pop-up AFTER successful submit
           showNextSteps(email);
-
-          // premium status (short)
           showStatus(
             "Account created.<br><span style='color:var(--text-medium);font-weight:600;'>Please confirm your email to continue.</span>",
             "success"
           );
 
           goSignIn.href = 'sign-in.html?check_email=1&next=' + encodeURIComponent(nextTarget) + '&email=' + encodeURIComponent(email);
-
-          // (Optional) keep user on page to read steps (no forced redirect)
-          // If you DO want the old behaviour, uncomment below:
-          /*
-          setTimeout(() => {
-            window.location.href = goSignIn.href;
-          }, 1400);
-          */
         } else {
           showStatus("Welcome — your account is ready.<br><span style='color:var(--text-medium);font-weight:600;'>Redirecting you now…</span>", "success");
           localStorage.removeItem('tep_post_login_redirect');
