--- a/create-account.html
+++ b/create-account.html
@@ -61,7 +61,7 @@
       border:1px solid var(--panel-border);
       overflow:hidden;
       display:flex;
-      min-height:640px;
+      min-height:620px;
       max-height:88vh;
     }
 
@@ -69,46 +69,28 @@
     .left-column{
       flex:1.15;
       background:rgba(123,95,196,0.10);
-      padding:52px 52px 40px; /* ✅ moved up */
+      padding:70px 50px 30px; /* ✅ slightly reduced top/bottom */
       display:flex;
       flex-direction:column;
       justify-content:flex-start;
-      gap:18px;
-    }
-
-    /* ✅ logo now on the left */
-    .left-brand{
-      display:flex;
-      align-items:center;
-      gap:12px;
-      margin-bottom:6px;
-    }
-    .left-logo{
-      height:42px;
-      width:auto;
-    }
-    .left-logo-fallback{
-      display:none;
-      font-weight:800;
-      letter-spacing:.08em;
-      font-size:13px;
-      color:var(--text-dark);
     }
 
     .left-column h1{
-      font-size:34px; /* ✅ reduced */
-      font-weight:750;
+      font-size:30px; /* ✅ smaller */
+      font-weight:700;
       letter-spacing:-0.02em;
       line-height:1.12;
+      margin-top:50px;
+      margin-bottom:12px;
       color:var(--text-dark);
     }
 
     .left-column p{
       color:var(--text-medium);
-      font-size:16px; /* ✅ reduced */
+      font-size:18px;
       line-height:1.5;
-      max-width:560px;
-      margin-top:-6px;
+      max-width:520px;
+      margin-bottom:24px;
     }
 
     .benefits-list{
@@ -116,8 +98,8 @@
       margin-top:6px;
       display:flex;
       flex-direction:column;
-      gap:14px;
-      max-width:600px;
+      gap:16px;
+      max-width:560px;
     }
 
     .benefits-list li{
@@ -125,7 +107,7 @@
       gap:12px;
       align-items:flex-start;
       color:var(--text-medium);
-      font-size:15px;
+      font-size:16px;
       line-height:1.45;
     }
 
@@ -136,30 +118,43 @@
       flex-shrink:0;
     }
 
-    /* RIGHT */
+    /* RIGHT (compressed) */
     .right-column{
       flex:1;
-      padding:22px 46px 20px; /* ✅ moved up */
+      padding:18px 46px 14px; /* ✅ reduced top/bottom */
       display:flex;
       flex-direction:column;
     }
 
-    .form-header{
-      margin-top:0;           /* ✅ up */
-      margin-bottom:10px;     /* ✅ tighter */
+    /* ✅ logo bigger */
+    .brand-row{
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      margin-bottom:8px; /* ✅ tighter */
     }
 
+    .logo-img{ height:77px; width:auto; } /* ✅ bigger */
+    .logo-fallback{ display:none; font-weight:800; letter-spacing:.08em; font-size:14px; }
+
+    .form-header{
+      margin-top:0px;
+      margin-bottom:8px; /* ✅ tighter */
+    }
+
+    /* ✅ "Create your account" smaller */
     .form-header h2{
-      font-size:30px;
-      font-weight:750;
+      font-size:25px;
+      font-weight:700;
+      margin-top:20px;
       letter-spacing:-0.02em;
-      margin-bottom:6px;
+      margin-bottom:4px;
     }
 
     .form-header p{
       color:var(--text-muted);
-      font-size:15px;
-      line-height:1.4;
+      font-size:14px;
+      line-height:1.35;
     }
 
     /* Pop-up (hidden until after submit success) */
@@ -167,8 +162,8 @@
       border:1px solid rgba(123,95,196,0.22);
       background:rgba(123,95,196,0.06);
       border-radius:var(--radius-14);
-      padding:12px 14px;
-      margin:8px 0 12px;
+      padding:10px 12px;     /* ✅ tighter */
+      margin:6px 0 10px;     /* ✅ tighter */
       display:none;
     }
     .next-steps-pop.show{
@@ -183,16 +178,16 @@
       display:flex;
       align-items:center;
       gap:10px;
-      font-weight:750;
+      font-weight:700;
       color:var(--text-dark);
-      font-size:15px;
+      font-size:14px;
       margin-bottom:6px;
     }
     .next-steps-title i{ color:var(--accent-purple); }
     .next-steps-pop ol{
       margin-left:18px;
       color:var(--text-medium);
-      font-size:13.5px;
+      font-size:13px;
       line-height:1.5;
     }
     .next-steps-pop li{ margin-bottom:3px; }
@@ -200,7 +195,7 @@
       margin-top:6px;
       color:var(--text-muted);
       font-size:12.5px;
-      line-height:1.4;
+      line-height:1.35;
     }
     .next-steps-actions{
       margin-top:8px;
@@ -212,7 +207,7 @@
     .link-btn{
       color:var(--accent-purple);
       text-decoration:none;
-      font-weight:800;
+      font-weight:700;
       font-size:12.5px;
     }
     .link-btn:hover{ text-decoration:underline; }
@@ -221,7 +216,7 @@
       border:none;
       padding:0;
       color:var(--text-muted);
-      font-weight:800;
+      font-weight:700;
       font-size:12.5px;
       cursor:pointer;
     }
@@ -232,36 +227,36 @@
       display:none;
       border-radius:var(--radius-12);
       padding:10px 12px;
-      font-size:13.5px;
+      font-size:13px;
       line-height:1.45;
       border:1px solid var(--panel-border);
       background:#fafafa;
       color:var(--text-medium);
-      margin:6px 0 10px;
+      margin:6px 0 8px; /* ✅ tighter */
     }
     .inline-status.show{ display:block; }
     .inline-status.success{ border-color:rgba(31,143,74,0.25); background:rgba(31,143,74,0.06); color:var(--success); }
     .inline-status.error{ border-color:rgba(192,57,43,0.25); background:rgba(192,57,43,0.06); color:var(--danger); }
     .inline-status.info{ border-color:rgba(47,111,214,0.22); background:rgba(47,111,214,0.06); color:var(--info); }
 
-    /* Form */
+    /* Form (compressed) */
     .form-row{ display:flex; gap:12px; }
-    .form-group{ flex:1; margin-bottom:10px; }
+    .form-group{ flex:1; margin-bottom:8px; } /* ✅ tighter */
 
     .form-label{
       display:block;
-      margin-bottom:6px;
-      font-weight:750;
-      font-size:13.5px;
+      margin-bottom:5px;
+      font-weight:700;
+      font-size:13px;
       color:var(--text-dark);
     }
 
     .form-input{
       width:100%;
-      padding:10px 12px;
+      padding:9px 12px; /* ✅ slightly tighter */
       border:1px solid var(--panel-border);
       border-radius:var(--radius-10);
-      font-size:15px;
+      font-size:14.5px;
       background:var(--primary-white);
       color:var(--text-dark);
       transition:all .15s ease;
@@ -303,10 +298,10 @@
       border-radius:0;
       box-shadow:none !important;
       flex:1;
-      padding:10px 12px;
+      padding:9px 12px;
     }
     .toggle-label{
-      width:48px;
+      width:46px;
       display:inline-flex;
       align-items:center;
       justify-content:center;
@@ -326,22 +321,26 @@
     .reveal-toggle:checked ~ .password-row .icon-eye { display:none; }
 
     .password-strength{
-      margin-top:6px;
+      margin-top:4px; /* ✅ tighter */
       font-size:12.5px;
       display:flex;
       align-items:center;
-      min-height:16px;
-      font-weight:650;
+      min-height:14px;
+      font-weight:600;
     }
     .password-strength.weak{ color:var(--danger); }
     .password-strength.medium{ color:var(--warning); }
     .password-strength.strong{ color:var(--success); }
 
+    /* ✅ reduce space between password + confirm password blocks */
+    .form-group.password-wrap{ margin-bottom:6px; }
+    .form-group.password-wrap + .form-group.password-wrap{ margin-top:-4px; }
+
     .form-checkbox{
       display:flex;
       align-items:flex-start;
       gap:10px;
-      margin:8px 0 8px;
+      margin:8px 0 6px; /* ✅ tighter */
     }
     .checkbox-input{ margin-top:3px; accent-color:var(--accent-purple); }
     .checkbox-label{
@@ -349,7 +348,7 @@
       color:var(--text-medium);
       line-height:1.45;
     }
-    .checkbox-label a{ color:var(--accent-purple); text-decoration:none; font-weight:800; }
+    .checkbox-label a{ color:var(--accent-purple); text-decoration:none; font-weight:700; }
     .checkbox-label a:hover{ text-decoration:underline; }
 
     .submit-button{
@@ -357,13 +356,13 @@
       background:var(--accent-purple);
       color:white;
       border:none;
-      padding:12px 14px;
+      padding:11px 14px; /* ✅ slightly tighter */
       border-radius:var(--radius-12);
-      font-weight:850;
+      font-weight:800;
       cursor:pointer;
       font-size:15px;
       transition:all .15s ease;
-      margin:10px 0 12px;
+      margin:8px 0 10px; /* ✅ tighter */
       display:flex;
       align-items:center;
       justify-content:center;
@@ -383,25 +382,25 @@
 
     .auth-footer{
       text-align:center;
-      padding-top:12px;
+      padding-top:10px; /* ✅ tighter */
       border-top:1px solid var(--panel-border);
       margin-top:auto;
     }
-    .auth-footer p{ color:var(--text-medium); font-size:13.5px; }
-    .auth-footer a{ color:var(--accent-purple); text-decoration:none; font-weight:850; }
+    .auth-footer p{ color:var(--text-medium); font-size:13px; }
+    .auth-footer a{ color:var(--accent-purple); text-decoration:none; font-weight:800; }
     .auth-footer a:hover{ text-decoration:underline; }
 
     @media (max-width:980px){
       .auth-container{ flex-direction:column; max-height:none; }
-      .left-column{ padding:28px 22px; }
-      .right-column{ padding:22px 18px; }
-      .left-column h1{ font-size:30px; }
-      .left-column p{ font-size:15px; }
+      .left-column{ padding:36px 24px; }
+      .left-column h1{ font-size:32px; } /* ✅ smaller on mobile */
+      .right-column{ padding:18px 18px; }
     }
     @media (max-width:520px){
       body{ padding:12px; }
       .form-row{ flex-direction:column; gap:0; }
-      .form-header h2{ font-size:26px; }
+      .form-header h2{ font-size:22px; }
+      .logo-img{ height:50px; }
     }
   </style>
 </head>
@@ -411,14 +410,6 @@
 
     <!-- LEFT -->
     <div class="left-column">
-
-      <!-- ✅ Logo moved to the left panel -->
-      <div class="left-brand">
-        <img src="assets/img/logo.png" alt="The Employee Playbook" class="left-logo" id="leftLogo"
-          onerror="this.style.display='none'; document.getElementById('left-logo-fallback').style.display='block';">
-        <div class="left-logo-fallback" id="left-logo-fallback">THE EMPLOYEE PLAYBOOK</div>
-      </div>
-
       <h1>Join The Employee Playbook</h1>
       <p>Create your account and start making smarter moves in your career</p>
 
@@ -435,6 +426,12 @@
 
     <!-- RIGHT -->
     <div class="right-column">
+
+      <div class="brand-row">
+        <img src="assets/img/logo.png" alt="The Employee Playbook" class="logo-img" id="logo"
+          onerror="this.style.display='none'; document.getElementById('logo-fallback').style.display='block';">
+        <div class="logo-fallback" id="logo-fallback">THE EMPLOYEE PLAYBOOK</div>
+      </div>
 
       <div class="form-header">
         <h2>Create your account</h2>
@@ -631,7 +628,7 @@
       return {
         type:'error',
         html:"We couldn’t create your account right now.<br><span style='color:var(--text-medium);font-weight:600;'>Please try again — if it continues, contact support.</span>"
-        };
+      };
     }
 
     // Password indicators
@@ -696,7 +693,7 @@
     createAccountForm.addEventListener('submit', async (e) => {
       e.preventDefault();
       clearStatus();
-      hideNextSteps();
+      nextStepsPop.classList.remove('show');
 
       if (!supabaseClient || !supabaseClient.auth) {
         showStatus(
